--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
 
         <div class="luck-display" id="luckDisplay">
-            Welcome to your personalized luck adventure! Try the games below! 🎮
+            Welcome to your goodluck luck adventure! Try the games below! 🎮
         </div>
 
         <button class="luck-button" onclick="generateLuck()">Generate Good Luck ✨</button>
